TRAIN/Makefile: add real-clean target

--- a/first-stage/TRAIN/Makefile
+++ b/first-stage/TRAIN/Makefile
@@ -371,6 +371,10 @@ all: rCounts selFeats iScale trainRs pSgT pTgNt pUgT kn3Counts pSfgT
 clean: 
 	rm -f *.o rCounts selFeats iScale trainRs pSgT pTgNt pUgT kn3Counts pSfgT
 
+.PHONY: real-clean
+real-clean: clean
+	rm -f *.d Makefile.dep TAGS tags
+
 #---------------------------------------------------------------------
 
 #ifeq ($(SWITCH),-LCh)
