Add Java and Python SWIG wrappers for the first stage parser. swig/wrapper.i: The SWIG wrapper itself swig/*/test: Some simple examples/tests for the wrapper Makefile:     refactored out lots of common object lists, removed cruft     new target real-clean for making distributions     add swig-java, swig-java-test, swig-python, swig-python-test, and     swig-clean targets ThreadManager: system to manage "thread slots" when SWIG is used in     multithreading mode weakdecls.h: made the error() function "weak" so we can override it in the     SWIG wrapper and not call abort() .hgignore: include all the new generated junk

--- a/.hgignore
+++ b/.hgignore
@@ -16,13 +16,9 @@ glob:first-stage/TRAIN/selFeats
 glob:first-stage/TRAIN/trainRs
 glob:second-stage/programs/eval-beam/main
 glob:second-stage/programs/eval-weights/eval-weights
-glob:second-stage/programs/features/best-parses
-glob:second-stage/programs/features/best-splhparses
-glob:second-stage/programs/features/count-nfeatures
-glob:second-stage/programs/features/extract-nfeatures
-glob:second-stage/programs/features/count-spfeatures
-glob:second-stage/programs/features/extract-spfeatures
-glob:second-stage/programs/features/extract-splhfeatures
+glob:second-stage/programs/features/best-*parses
+glob:second-stage/programs/features/extract-*features
+glob:second-stage/programs/features/count-*features
 glob:second-stage/programs/features/oracle-score
 glob:second-stage/programs/features/parallel-extract-nfeatures
 glob:second-stage/programs/features/parallel-extract-spfeatures
@@ -33,5 +29,14 @@ glob:second-stage/programs/prepare-data/prepare-new-data
 glob:second-stage/programs/prepare-data/ptb
 glob:*.swp
 glob:tags
+glob:TAGS
 glob:first-stage/PARSE/evalTree
 glob:first-stage/PARSE/parseAndEval
+glob:*.py[co]
+glob:*.class
+glob:*.so
+glob:*_wrapper.cxx
+glob:first-stage/PARSE/swig/*/lib/*
+glob:second-stage/programs/features/swig/*/lib/*
+glob:first-stage/PARSE/swig/*/build/*
+glob:second-stage/programs/features/swig/*/build/*
