.hgignore: Add SParseval

--- a/.hgignore
+++ b/.hgignore
@@ -45,3 +45,4 @@ glob:first-stage/PARSE/swig/*/lib/*
 glob:second-stage/programs/features/swig/*/lib/*
 glob:first-stage/PARSE/swig/*/build/*
 glob:second-stage/programs/features/swig/*/build/*
+glob:SParseval/*
