Initial version of the regression test suite. This includes several sets of new sentences to test various aspects of the parser and reranker.

--- a/.hgignore
+++ b/.hgignore
@@ -46,3 +46,4 @@ glob:second-stage/programs/features/swig/*/lib/*
 glob:first-stage/PARSE/swig/*/build/*
 glob:second-stage/programs/features/swig/*/build/*
 glob:SParseval/*
+glob:regression-test-*
