--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,6 @@
 language: cpp
 compiler: gcc
-script: make
+script:
+  - make
+  - make reranker
+  - make -C second-stage/programs/features parallel-tools
