.travis.yml: No need to get libboost-dev-all -- libboost-dev should suffice
Hopefully last travis-ci change for now...

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: cpp
 compiler: gcc
-install: sudo apt-get install libboost-all-dev
+install: sudo apt-get install libboost-dev
 script:
   - make
   - make reranker
