Add distutils support for Python interface. Python extensions can now be built with "sudo python setup.py install" or "sudo pip install bllipparser" if pip is available. As a result, the main "make swig-python" target has been removed to avoid confusion (the others still exist since they're useful for valgrind and other debugging).
Python code has been moved from swig/ to python/bllipparser/
RerankingParser has various cleanups and improvements (plus some new docs).

--HG--
rename : swig/ParsingShell.py => python/bllipparser/ParsingShell.py
rename : swig/RerankingParser.py => python/bllipparser/RerankingParser.py

--- a/.hgignore
+++ b/.hgignore
@@ -47,3 +47,10 @@ glob:first-stage/PARSE/swig/*/build/*
 glob:second-stage/programs/features/swig/*/build/*
 glob:SParseval/*
 glob:regression-test-*
+glob:build*
+glob:dist*
+glob:first-stage/PARSE/parser_wrapper.C
+glob:second-stage/programs/features/reranker_wrapper.C
+glob:python/bllipparser/CharniakParser.py
+glob:python/bllipparser/JohnsonReranker.py
+glob:MANIFEST
