--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,6 @@
+include README-python.txt
+include NOTICE
+include LICENSE-2.0.txt
 include first-stage/PARSE/*.h
 include first-stage/PARSE/swig/wrapper.i
 include first-stage/PARSE/swig/java/include/std_list.i
