Add new reranker retrainer (cvlm-lbfgs) This is a new Apache license-compatible reranker retrainer. It uses libLBFGS for optimization and COBYLA to tune regularization coefficients. This doesn't give exactly the same results as previous rerankers, but the resulting models appear to be empirically close. libLBFGS supports both L1 and L2 regularization using OWLQN for the former.
Minor changes:
- updated READMEs to drop remaining mentions of TAO/PETSc and include install
  instructions for libLBFGS and Boost
- updated Makefile to make cvlm-lbfgs the default optimizer (also made "final"
  the default version since that's presumably what most expect)
- updated wlle Makefile to drop remaining mentions of TAO/PETSc and older
  optimizers which used to use it
- minor improvements to the main README (a task never finished...)

--- a/.hgignore
+++ b/.hgignore
@@ -30,6 +30,7 @@ glob:second-stage/programs/prepare-data/ptb
 glob:second-stage/programs/wlle/avper
 glob:second-stage/programs/wlle/gavper
 glob:second-stage/programs/wlle/cvlm
+glob:second-stage/programs/wlle/cvlm-lbfgs
 glob:second-stage/programs/wlle/oracle
 glob:*.swp
 glob:*.orig
