--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 language: cpp
 compiler: gcc
+before_install: sudo apt-get update
 install: sudo apt-get install libboost-dev liblbfgs-dev
 script:
   - make
