.travis.yml: add-apt-repository needs --yes so it doesn't block on keyboard input

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: cpp
 compiler: gcc
 before_install:
-  - sudo add-apt-repository ppa:ktm5j/uva-cs-ppa
+  - sudo add-apt-repository --yes ppa:ktm5j/uva-cs-ppa
   - sudo apt-get update
 install: sudo apt-get install libboost-dev liblbfgs-dev
 script:
